# aumos-composable-installer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
src/aumos_composable_installer/: __init__.py  main.py  orchestrator.py  settings.py
src/aumos_composable_installer/adapters/: __init__.py  batch_coordinator.py  config_manager.py  health_monitor.py  preflight_checker.py  rollback_automation.py  upgrade_orchestrator.py
src/aumos_composable_installer/bundle/: __init__.py  creator.py  loader.py  manifest.py
src/aumos_composable_installer/commands/: __init__.py  activate.py  bundle.py  config.py  deactivate.py  diagnose.py  generate.py  install.py  serve_installer.py  status.py  upgrade.py
src/aumos_composable_installer/deployer/: __init__.py  helm_deployer.py  interfaces.py  registry.py  upgrade_session.py
src/aumos_composable_installer/generator/: __init__.py  terraform_generator.py
src/aumos_composable_installer/health/: __init__.py  checker.py
src/aumos_composable_installer/installer_api/: __init__.py  router.py
src/aumos_composable_installer/license/: __init__.py  key_manager.py  validator.py
src/aumos_composable_installer/resolver/: __init__.py  conflict_detector.py  dependency_graph.py  module_manifest.py
src/aumos_composable_installer/telemetry/: __init__.py  collector.py
